# Trading

./: README.md  main.py  main_webpage.html  pyproject.toml
src/: catalog.html  categories.html  contacts.html  lesson.html  main_webpage.html  prakika.py
