[tool.poetry]
name = "trading"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flake8 = "^7.1.1"
mypy = "^1.14.0"
isort = "^5.13.2"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[black]
line-length = 119
exclude = ".git"

[isort]
line_length = 119

[mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = "venv"
